--- a/package.json
+++ b/package.json
@@ -12,26 +12,31 @@
     "migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
-    "@webcomponents/webcomponentsjs": "2.2.10",
-    "chart.js": "^2.9.4",
-    "express": "^4.17.2",
-    "jquery": "^3.6.0",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2"
+    "@webcomponents/webcomponentsjs": "^2.8.0",
+    "chart.js": "^4.5.0",
+    "express": "^5.1.0",
+    "jquery": "^3.7.1",
+    "lit": "^3.3.1",
+    "lit-element": "^4.2.1",
+    "lit-html": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
+    "@babel/cli": "^7.28.3",
     "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/register": "^7.5.5",
-    "babel-loader": "^8.0.6",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.3",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.27.1",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-typescript": "^7.27.1",
+    "@babel/register": "^7.28.3",
+    "babel-loader": "^10.0.0",
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.9.2",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
