fix: minor type cleanup

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-typescript": "^7.27.1",
     "@babel/register": "^7.28.3",
+    "@types/jquery": "^3.5.33",
     "babel-loader": "^10.0.0",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.2",
